# mhhs

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.cmake
inputs/: config.toml  dispatch.json_0  dispatch.json_1  hbv_monthly_inputs.txt  n_build_prepare_data.sh  run_n_build.sh  strong_test_prepare_data.sh  weak_test_prepare_data.sh
src/: CMakeLists.txt  context.cpp  context.h  main.cpp
src/message/: routed_data_imessage.cpp  routed_data_imessage.h  routed_data_imsgs_pool.cpp  routed_data_imsgs_pool.h
src/models/: XinanjiangModel.cpp  XinanjiangModel.h  base_model.cpp  base_model.h  model_context.cpp  model_context.h  model_factory.cpp  model_factory.h  model_producer.h  model_warehouse.h  simple_hbv_pfmodel.cpp  xinanjiang2_model.cpp  xinanjiang2_model.h
src/models/diffusive_waves/: diffusive_waves_routing_model.cpp  diffusive_waves_routing_model.h  dswv_model_producer.cpp  dswv_model_producer.h
src/models/easydhm/: AllocateVars.f90  AutoAdjustRunoff.f90  AutoTimes.f90  CMakeLists.txt  CalModelPara.f90  ConfluxSim.f90  CurDHMParam+EasyDHMParamMod.f90  CurrentUnitVars.f90  DHM.f90  DestroyOutData.f90  Dll2.f90  ETpotMod.f90  EasyDHM.f90  EasyDHMVar.f90  EasyDHM_Dll.f90  GlobalFun.f90  HydroData.f90  HydroInfo.f90  HydroObserved.f90  InitDHMState.f90  InitStatVars.f90  LandSurfaceSim.f90  ModelConfig.f90  OutputPRMod.f90  ParamRangeMod.f90  ReachInfoMod.f90  ReachParam+CurReachParam.f90  ReachVarMod.f90  ReadMe.txt  ResInfo.f90  ResRange.f90  ResVarMod.f90  ST_OutUnitDHMMod.f90  ST_OutUnitStateDHM.f90  ST_PR_OutMod.f90  Sim_ETDHM.f90  Sim_SnowDHM.f90  Sim_SoilDHM.f90  Sim_SurfQDHM.f90  SimpleVar.f90  (+24 more)
src/models/hims/: hims_producer.cpp  hims_producer.h  hims_runoff_model.cpp  hims_runoff_model.h
src/models/muskingum/: mskg_model_producer.cpp  mskg_model_producer.h  muskingum_routing_model.cpp  muskingum_routing_model.h
src/models/sac/: sac_model_producer.cpp  sac_model_producer.h  sac_runoff_model.cpp  sac_runoff_model.h
src/models/unused/: XinanjiangModel.cpp  XinanjiangModel.h  base_model.cpp  base_model.h  simple_hbv_pfmodel.h  xinanjiang3_model.cpp  xinanjiang3_model.h  xinxnjiang_model.backup
src/models/xaj/: xaj_producer.cpp  xaj_producer.h  xaj_runoff_model.cpp  xaj_runoff_model.h
src/models/xaj3/: xaj3_producer.cpp  xaj3_producer.h  xaj3_runoff_model.cpp  xaj3_runoff_model.h
src/readInputs/: config.cpp  config.h  parse_dispatch.cpp  parse_dispatch.h
src/simulation/: routed_data.cpp  routed_data.h  routing_data_meta.cpp  routing_data_meta.h  simulation.cpp  simulation.h  subbasins_container.cpp  subbasins_container.h  trouting_data.cpp  trouting_data.h
src/subbasin/: hru.cpp  hru.h  simulation_subbasin.cpp  simulation_subbasin.h  subbasin.cpp  subbasin.h
src/utils/: const.h  datetime_parser.cpp  datetime_parser.h  model_file_utils.h  mpiutil.cpp  mpiutil.h  predefine.h  ret_msg.cpp  ret_msg.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/model/: easydhm_test.cpp  hbv_test.cpp  test_model_context.cpp  xinanjiang_test.cpp
test/unit/readinputs/: readinputs_test.cpp
test/unit/simulation/: simulation.cpp
test/unit/subbasin/: subbasin_test.cpp
test/unit/utils/: mpiutil_test.cpp
tool/: CMakeLists.txt
tool/create_json/: check_dispatch.py  create_dispatch  create_dispatch.bak  create_dispatch.go  create_dispatch_depthtraverse  create_dispatch_depthtraverse.go  create_json.sh  ctdp  dispatch.json  test.sh
tool/create_json/~/code/mhhss_all/inputs/dispatch/strong/dispatch_12_8/: dispatch.json_0  dispatch.json_1  dispatch.json_2  dispatch.json_3  dispatch.json_4  dispatch.json_5  dispatch.json_6  dispatch.json_7
tool/easydhm/: CMakeLists.txt  main.cpp
tool/rdm_gen_model_inp/: CMakeLists.txt  main.cpp
